[package]
name = "vga-framebuffer"
version = "0.6.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
license = "MIT OR Apache-2.0"
description = "A text console output over a VGA compatible signal"
keywords = ["vga", "text"]
categories = ["embedded", "no-std"]
repository = "https://github.com/thejpster/vga-framebuffer-rs"

[dependencies.console-traits]
version = "0.3"

[dev-dependencies]
term = "0.5"
