[package]
name = "vga-framebuffer"
version = "0.10.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
license = "MIT OR Apache-2.0"
description = "A text console output over a VGA compatible signal"
keywords = ["vga", "text"]
categories = ["embedded", "no-std"]
repository = "https://github.com/thejpster/vga-framebuffer-rs"
edition = "2018"

[dependencies.console-traits]
version = "0.3"

[dev-dependencies]
term = "0.5"
